iptables/iptables.rules
# Generated by iptables-save v1.8.7 on Wed Mar 15 21:54:09 2023
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT DROP [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 5 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 12 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1127 -j ACCEPT
-A INPUT -p udp -m udp --dport 37008 -j ACCEPT
-A INPUT -p udp -m multiport --dports 67:69 -j ACCEPT
-A OUTPUT -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Wed Mar 15 21:54:09 2023
# Generated by iptables-save v1.8.7 on Wed Mar 15 21:54:09 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -s 192.168.55.0/24 -o enp42s0 -j MASQUERADE
COMMIT
# Completed on Wed Mar 15 21:54:09 2023
